refactor: 테스트 버튼 삭제 및 degree와 score를 poseCore로 이동

--- a/TurtleNeck/TurtleNeck/PoseInfo.plist
+++ b/TurtleNeck/TurtleNeck/PoseInfo.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>API KEY를 입력해주세요</string>
+	<string>KakaoAK 32e827cd3335958e97b7b7240ec4466c</string>
 </dict>
 </plist>
