refactor: 잘못된 네이밍 수정

--- a/TurtleNeck/TurtleNeck/Info.plist
+++ b/TurtleNeck/TurtleNeck/Info.plist
@@ -16,7 +16,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
-		<string>MainGreenColor</string>
+		<string>MainColor</string>
 		<key>UIImageName</key>
 		<string>LaunchScreenLogo</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
